feat [subjects]: add deleting of subjects
